Upgrade to openrewrite 21