@@ -6,8 +6,8 @@ import io.papermc.restamp.RestampInput;
 import org.cadixdev.at.AccessTransform;
 import org.cadixdev.at.AccessTransformSet;
 import org.cadixdev.at.ModifierChange;
-import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
+import org.jspecify.annotations.NullMarked;
+import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -20,18 +20,20 @@ import java.util.List;
 import static io.papermc.restamp.RestampFunctionTestHelper.accessChangeToModifierString;
 
 @Tag("function")
+@NullMarked
 public class RestampFieldFunctionTest {
 
     @ParameterizedTest
-    @ArgumentsSource(RestampFunctionTestHelper.CartesianVisibilityArgumentProvider.class)
-    public void testAccessTransformerOnField(@NotNull final AccessTransform given,
-                                             @NotNull final AccessTransform target,
-                                             @Nullable final String staticModifier) {
+    @ArgumentsSource(RestampFunctionTestHelper.CartesianVisibilityArgumentAndStyleProvider.class)
+    public void testAccessTransformerOnField(final AccessTransform given,
+                                             final AccessTransform target,
+                                             @Nullable final String staticModifier,
+                                             final RestampFunctionTestHelper.TestCodeStyle testCodeStyle) {
         final AccessTransformSet accessTransformSet = AccessTransformSet.create();
         accessTransformSet.getOrCreateClass("io.papermc.test.Test").replaceField("passphrase", target);
 
         final RestampInput input = RestampFunctionTestHelper.inputFromSourceString(accessTransformSet, constructFieldTest(
-            accessChangeToModifierString(given.getAccess(), staticModifier, given.getFinal() == ModifierChange.ADD ? "final" : null)
+            accessChangeToModifierString(given.getAccess(), staticModifier, given.getFinal() == ModifierChange.ADD ? "final" : null), testCodeStyle
         ));
 
         final List<Result> results = Restamp.run(input).getAllResults();
@@ -42,24 +44,29 @@ public class RestampFieldFunctionTest {
 
         Assertions.assertEquals(1, results.size());
 
-        final SourceFile fileAfterRestamp = results.get(0).getAfter();
+        final SourceFile fileAfterRestamp = results.getFirst().getAfter();
         Assertions.assertNotNull(fileAfterRestamp);
         Assertions.assertEquals(constructFieldTest(
-            accessChangeToModifierString(target.getAccess(), staticModifier, target.getFinal() == ModifierChange.ADD ? "final" : null)
+            accessChangeToModifierString(target.getAccess(), staticModifier, target.getFinal() == ModifierChange.ADD ? "final" : null), testCodeStyle
         ), fileAfterRestamp.printAll());
     }
 
-    @NotNull
-    private String constructFieldTest(@NotNull String modifier) {
+    private String constructFieldTest(String modifier, final RestampFunctionTestHelper.TestCodeStyle testCodeStyle) {
         if (!modifier.isEmpty()) modifier = modifier + " ";
-        return """
+        final StringBuilder builder = new StringBuilder();
+        builder.append("""
             package io.papermc.test;
-                        
+            
             public class Test {
                 /* Comment above */
-                @NotNull %sString passphrase = "Hello World";
+            """);
+        if (testCodeStyle.includesLeadingAnnotation()) builder.append("    @Experimental\n");
+        if (testCodeStyle.leadingSpace()) builder.append(" /* leading space */ ");
+        builder.append("""
+                %sString passphrase = "Hello World";
             }
-            """.formatted(modifier);
+            """.formatted(modifier));
+        return builder.toString();
     }
 
 }
